DevOps/Kubernetes/Certified Kubernetes Administrator (CKA)/Networking/Lab/Using Network Policies/np-client-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-client-busybox
  namespace: np-test
  labels:
    app: client
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 5; done']
