DevOps/Kubernetes/Certified Kubernetes Administrator (CKA)/Networking/Lab/Using Network Policies/np-server-nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-server-nginx
  namespace: np-test
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
