DevOps/Kubernetes/Certified Kubernetes Administrator (CKA)/Networking/Lab/Using Network Policies/networkpolicy-allow-incoming.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allow-incoming
  namespace: np-test
spec:
  podSelector:
    matchLabels:
      app: nginx
  # this policy apply to both incoming and outgoing traffic    
  policyTypes:
  - Ingress
  - Egress
  # Add ingress rule to allow incoming traffic from pods under the ns with labelled as team=np-test
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: np-test
    ports:
    # allow TCP protocol on port 80 which is the default HTTP port for ngnix
    - port: 80
      protocol: TCP
